[gd_scene load_steps=32 format=3 uid="uid://dgs7vdgy2wm5m"]

[ext_resource type="Script" path="res://entities/enemies/bob/Enemy_Bob.gd" id="1_olvun"]
[ext_resource type="Texture2D" uid="uid://bmqq4wmaqvsgo" path="res://entities/enemies/bob/Bob_16x16.png" id="2_oaulk"]
[ext_resource type="PackedScene" uid="uid://bjb2isxw353ap" path="res://entities/enemies/bob/Bob_Projectile.tscn" id="2_xgiir"]
[ext_resource type="AudioStream" uid="uid://cmedde8508xnl" path="res://sounds/Attack/bob/attack1.mp3" id="4_yj5cx"]
[ext_resource type="AudioStream" uid="uid://dxerbh8uc4slp" path="res://sounds/Attack/bob/death1.mp3" id="5_oxap5"]
[ext_resource type="AudioStream" uid="uid://bx10ajjgkhvnd" path="res://sounds/Attack/bob/hurt1.mp3" id="6_2opsb"]
[ext_resource type="Script" path="res://entities/enemies/amelia/DeathSound.gd" id="6_k5jxy"]
[ext_resource type="AudioStream" uid="uid://hi4sab8kmnwr" path="res://sounds/Attack/bob/hurt2.mp3" id="7_krgj8"]
[ext_resource type="AudioStream" uid="uid://bt3v4l6bxub6q" path="res://sounds/Attack/bob/hurt3.mp3" id="8_soeac"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7qcuv"]
radius = 7.0
height = 22.0

[sub_resource type="AtlasTexture" id="AtlasTexture_lvton"]
atlas = ExtResource("2_oaulk")
region = Rect2(48, 0, 16, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxl7u"]
atlas = ExtResource("2_oaulk")
region = Rect2(288, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqead"]
atlas = ExtResource("2_oaulk")
region = Rect2(304, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_le63o"]
atlas = ExtResource("2_oaulk")
region = Rect2(320, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kchqb"]
atlas = ExtResource("2_oaulk")
region = Rect2(336, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_it8ml"]
atlas = ExtResource("2_oaulk")
region = Rect2(256, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2agw2"]
atlas = ExtResource("2_oaulk")
region = Rect2(240, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c4g8h"]
atlas = ExtResource("2_oaulk")
region = Rect2(224, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qg3ml"]
atlas = ExtResource("2_oaulk")
region = Rect2(208, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyhl4"]
atlas = ExtResource("2_oaulk")
region = Rect2(16, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sa7me"]
atlas = ExtResource("2_oaulk")
region = Rect2(32, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvtsw"]
atlas = ExtResource("2_oaulk")
region = Rect2(48, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrni2"]
atlas = ExtResource("2_oaulk")
region = Rect2(64, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5arro"]
atlas = ExtResource("2_oaulk")
region = Rect2(96, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_udly7"]
atlas = ExtResource("2_oaulk")
region = Rect2(112, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y2d24"]
atlas = ExtResource("2_oaulk")
region = Rect2(128, 64, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7a5xx"]
atlas = ExtResource("2_oaulk")
region = Rect2(144, 64, 16, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nokxv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvton")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxl7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqead")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_le63o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kchqb")
}],
"loop": true,
"name": &"move_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_it8ml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2agw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c4g8h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qg3ml")
}],
"loop": true,
"name": &"move_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyhl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sa7me")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvtsw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrni2")
}],
"loop": true,
"name": &"move_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5arro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_udly7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y2d24")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7a5xx")
}],
"loop": true,
"name": &"move_up",
"speed": 5.0
}]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_r5el0"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("4_yj5cx")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0usje"]
random_pitch = 1.1
streams_count = 1
stream_0/stream = ExtResource("5_oxap5")
stream_0/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xkqt2"]
random_pitch = 1.1
streams_count = 3
stream_0/stream = ExtResource("6_2opsb")
stream_0/weight = 1.0
stream_1/stream = ExtResource("7_krgj8")
stream_1/weight = 1.0
stream_2/stream = ExtResource("8_soeac")
stream_2/weight = 1.0

[node name="EnemyBob" type="CharacterBody2D" groups=["Enemy", "Passive"]]
collision_layer = 4
collision_mask = 41
script = ExtResource("1_olvun")
orb_template = ExtResource("2_xgiir")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_7qcuv")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_nokxv")
animation = &"idle"

[node name="MovementTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="AttackSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_r5el0")
pitch_scale = 0.9

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_0usje")
volume_db = 3.0
pitch_scale = 0.9
script = ExtResource("6_k5jxy")

[node name="HurtSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_xkqt2")
pitch_scale = 0.9

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="finished" from="DeathSound" to="DeathSound" method="_on_finished"]
